@@ -20,6 +20,7 @@ package org.apache.hadoop.hdfs.security.token.block;
 
 import java.io.ByteArrayInputStream;
 import java.io.DataInputStream;
+import java.io.File;
 import java.io.IOException;
 import java.net.InetSocketAddress;
 import java.util.EnumSet;
@@ -29,8 +30,13 @@ import org.apache.commons.logging.Log;
 import org.apache.commons.logging.LogFactory;
 import org.apache.commons.logging.impl.Log4JLogger;
 import org.apache.hadoop.conf.Configuration;
+import org.apache.hadoop.hdfs.DFSClient;
+import org.apache.hadoop.hdfs.DFSTestUtil;
 import org.apache.hadoop.hdfs.protocol.ClientDatanodeProtocol;
 import org.apache.hadoop.hdfs.protocol.Block;
+import org.apache.hadoop.hdfs.protocol.DatanodeID;
+import org.apache.hadoop.hdfs.protocol.DatanodeInfo;
+import org.apache.hadoop.hdfs.protocol.LocatedBlock;
 import org.apache.hadoop.io.TestWritable;
 import org.apache.hadoop.ipc.Client;
 import org.apache.hadoop.ipc.RPC;
@@ -45,6 +51,7 @@ import org.apache.hadoop.security.token.TokenIdentifier;
 import org.apache.log4j.Level;
 
 import org.junit.Test;
+import org.junit.Assume;
 
 import static org.apache.hadoop.fs.CommonConfigurationKeys.HADOOP_SECURITY_AUTHENTICATION;
 import static org.junit.Assert.*;
@@ -77,6 +84,9 @@ public class TestBlockToken {
     ((Log4JLogger) SaslRpcServer.LOG).getLogger().setLevel(Level.ALL);
     ((Log4JLogger) SaslInputStream.LOG).getLogger().setLevel(Level.ALL);
   }
+  
+  /** Directory where we can count our open file descriptors under Linux */
+  static File FD_DIR = new File("/proc/self/fd/");  
 
   long blockKeyUpdateInterval = 10 * 60 * 1000; // 10 mins
   long blockTokenLifetime = 2 * 60 * 1000; // 2 mins
@@ -180,14 +190,9 @@ public class TestBlockToken {
     slaveHandler.setKeys(keys);
     tokenGenerationAndVerification(masterHandler, slaveHandler);
   }
-
-  @Test
-  public void testBlockTokenRpc() throws Exception {
-    BlockTokenSecretManager sm = new BlockTokenSecretManager(true,
-        blockKeyUpdateInterval, blockTokenLifetime);
-    Token<BlockTokenIdentifier> token = sm.generateToken(block3,
-        EnumSet.allOf(BlockTokenSecretManager.AccessMode.class));
-
+  
+  private Server createMockDatanode(BlockTokenSecretManager sm,
+      Token<BlockTokenIdentifier> token) throws IOException {
     ClientDatanodeProtocol mockDN = mock(ClientDatanodeProtocol.class);
     when(mockDN.getProtocolVersion(anyString(), anyLong())).thenReturn(
         ClientDatanodeProtocol.versionID);
@@ -197,8 +202,18 @@ public class TestBlockToken {
     doAnswer(new getLengthAnswer(sm, id)).when(mockDN).getReplicaVisibleLength(
         any(Block.class));
 
-    final Server server = RPC.getServer(ClientDatanodeProtocol.class, mockDN,
+    return RPC.getServer(ClientDatanodeProtocol.class, mockDN,
         ADDRESS, 0, 5, true, conf, sm);
+  }
+
+  @Test
+  public void testBlockTokenRpc() throws Exception {
+    BlockTokenSecretManager sm = new BlockTokenSecretManager(true,
+        blockKeyUpdateInterval, blockTokenLifetime);
+    Token<BlockTokenIdentifier> token = sm.generateToken(block3,
+        EnumSet.allOf(BlockTokenSecretManager.AccessMode.class));
+
+    final Server server = createMockDatanode(sm, token);
 
     server.start();
 
@@ -209,7 +224,7 @@ public class TestBlockToken {
 
     ClientDatanodeProtocol proxy = null;
     try {
-      proxy = (ClientDatanodeProtocol) RPC.getProxy(
+      proxy = (ClientDatanodeProtocol)RPC.getProxy(
           ClientDatanodeProtocol.class, ClientDatanodeProtocol.versionID, addr,
           ticket, conf, NetUtils.getDefaultSocketFactory(conf));
       assertEquals(block3.getBlockId(), proxy.getReplicaVisibleLength(block3));
@@ -221,4 +236,62 @@ public class TestBlockToken {
     }
   }
 
+  /**
+   * Test that fast repeated invocations of createClientDatanodeProtocolProxy
+   * will not end up using up thousands of sockets. This is a regression test for
+   * HDFS-1965.
+   */
+  @Test
+  public void testBlockTokenRpcLeak() throws Exception {
+    Assume.assumeTrue(FD_DIR.exists());
+    BlockTokenSecretManager sm = new BlockTokenSecretManager(true,
+        blockKeyUpdateInterval, blockTokenLifetime);
+    Token<BlockTokenIdentifier> token = sm.generateToken(block3,
+        EnumSet.allOf(BlockTokenSecretManager.AccessMode.class));
+    
+    final Server server = createMockDatanode(sm, token);
+    server.start();
+
+    // a different server just used to trigger the behavior
+    // where RPC.stopProxy doesn't work.
+    final Server serverTwo = createMockDatanode(sm, token);
+    serverTwo.start();
+
+    final InetSocketAddress addr = NetUtils.getConnectAddress(server);
+    DatanodeID fakeDnId = new DatanodeID(
+        "localhost:" + addr.getPort(), "fake-storage", 0, addr.getPort());
+    
+    Block b = new Block(12345L);
+    LocatedBlock fakeBlock = new LocatedBlock(b, new DatanodeInfo[0]);
+    fakeBlock.setBlockToken(token);
+
+    ClientDatanodeProtocol proxy = null;
+
+    int fdsAtStart = countOpenFileDescriptors();
+    try {
+      long endTime = System.currentTimeMillis() + 3000;
+      while (System.currentTimeMillis() < endTime) {
+        proxy = DFSTestUtil.createClientDatanodeProtocolProxy(
+            fakeDnId, conf, 1000, fakeBlock);
+        assertEquals(block3.getBlockId(), proxy.getReplicaVisibleLength(block3));
+        LOG.info("Num open fds:" + countOpenFileDescriptors());
+      }
+
+      int fdsAtEnd = countOpenFileDescriptors();
+      
+      if (fdsAtEnd - fdsAtStart > 50) {
+        fail("Leaked " + (fdsAtEnd - fdsAtStart) + " fds!");
+      }
+    } finally {
+      server.stop();
+    }
+  }
+
+  /**
+   * @return the current number of file descriptors open by this
+   * process.
+   */
+  private static int countOpenFileDescriptors() throws IOException {
+    return FD_DIR.list().length;
+  }
 }
