@@ -534,6 +534,9 @@ Release 0.22.0 - Unreleased
 
     HDFS-1978. All but first option in LIBHDFS_OPTS is ignored. (eli)
 
+    HDFS-1965. IPCs done using block token-based tickets can't reuse
+    connections (todd)
+
 Release 0.21.1 - Unreleased
 
   IMPROVEMENTS
